uri to url conversion (parsing) back and force eliminated
 * Uri to url conversaion parsing eliminated.